--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@ button {
     font-size: 0.75rem;
     border-radius: 0.5rem;
     background: #000;
-    color: #fff;
+    color: rgb(238, 229, 229);
     padding: 0.25rem;
     position: relative;
     bottom: -10px;
